# Ransac

./: .gitignore  CMakeLists.txt  README.md  Ransac.cpp  Ransac.h  Struct2d.cpp  Struct2d.h  Struct3d.h  testRansac.cpp
lib/: libRansac.so.1  libRansac_d.so.1
struct2d/: Arc.hpp  CMakeLists.txt  Circle.hpp  Ellipse.hpp  EllipseNormal.hpp  Line.hpp  Point.hpp  Point2d.hpp  Point2f.hpp  SegmentLine.hpp  Struct2d.cpp  Struct2d.h  Struct2d.hpp  Struct2dBase.h  vec.hpp
struct3d/: Struct3d.cpp  Struct3d.h
